--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -48,6 +48,7 @@ nav:
   - 讲稿:
     - about: 1/about.md
     - 1/index.md
+    - sedd: 1/htthhnn.md
   - 简介:
     - pro: 2/build.md
     - 2/index.md
