--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -52,6 +52,7 @@ nav:
   - 简介:
      - pro: 2/build.md
      - 2/index.md
+     - mef: 2/htthhnn.md
   - 介绍:
      - myself: 3/build1.md
      - 3/index.md
