--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -51,7 +51,7 @@ nav:
      - sedd: 1/htthhnn.md
   - 简介:
      - pro: 2/build.md
-     - mef: 2/htthhnn.md
+     - git: 2/git.md
      - 2/index.md
   - 介绍:
      - myself: 3/build1.md
